--- a/src/Dotnetools.Share/Components/Tools/RGB.razor
+++ b/src/Dotnetools.Share/Components/Tools/RGB.razor
@@ -15,9 +15,9 @@
         <div class="flex" style="flex-wrap: wrap">
             <span class="tag tips">输入示例(大小写不敏感):</span>
             <span class="tag" style="background-color: #707B7C" @onclick='() => ShowSample("#707B7C")'>#707B7C</span>
-            <span class="tag" style="background-color: #AAF7DC6F"
-                  @onclick='() => ShowSample("#AAF7DC6F")'>
-                #AAF7DC6F
+            <span class="tag" style="background-color: #AC800080"
+            @onclick='() => ShowSample("#AC800080")'>
+                #AC800080
             </span>
             <span class="tag" style="background-color: rgb(72,201,176)"
                   @onclick='() => ShowSample("rgb(72,201,176)")'>
@@ -28,7 +28,7 @@
                 rgba(241,148,138,0.5)
             </span>
             <span class="tag" style="background-color: hsl(204,70%,63%)" @onclick='() => ShowSample("hsl(204,70%,63%)")'>hsl(204,70%,63%)</span>
-            <span class="tag" style="background-color: #ff7f00" @onclick='() => ShowSample("lab(20,50,30)")'>lab(20,50,30)</span>
+            <span class="tag" style="background-color: #110705" @onclick='() => ShowSample("lab(20,50,30)")'>lab(20,50,30)</span>
         </div>
         <table class="table divide fullwidth mt-2">
             <thead>
