Fix wasm compilation errors;

--- a/src/Dotnetools.Share/_Imports.razor
+++ b/src/Dotnetools.Share/_Imports.razor
@@ -13,4 +13,4 @@
 @using Dotnetools.Share.Models
 @using Dotnetools.Share.Components.Games
 @using Dotnetools.Share.Components.Tools
-@using Dotnet9.Commons
+@using Dotnetools.Helpers.Tools
