--- a/src/Dotnet9.BlazorWeb/_Imports.razor
+++ b/src/Dotnet9.BlazorWeb/_Imports.razor
@@ -39,3 +39,4 @@
 @using Dotnetools.Share.Components.Shared
 @using Dotnetools.Share.Components.Games
 @using Dotnetools.Share.Models
+@using Microsoft.AspNetCore.Components
