--- a/src/Dotnetools.Web/Shared/MainLayout.razor
+++ b/src/Dotnetools.Web/Shared/MainLayout.razor
@@ -33,11 +33,9 @@
 
                 <MCol Cols="12"
                       Sm="8">
-                    <MContainer>
-                        <MCard>
-                            @Body
-                        </MCard>
-                    </MContainer>
+                    <div style="background: #fff;">
+                        @Body
+                    </div>
                 </MCol>
 
                 <MCol Cols="12"
