--- a/src/Dotnet9.BlazorWeb/Pages/Tools/Games.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/Games.razor
@@ -1,3 +1,3 @@
 ﻿@page "/games"
 
-<GameOrToolList Title="在线游戏" OtherUrl="/games" Items="@GlobalData.GameItems"/>
+<ToolItemList Title="在线游戏" WebTitle="Dotnet9" Items="@GlobalData.GameItems" />
