--- a/src/Dotnetools.Share/_Imports.razor
+++ b/src/Dotnetools.Share/_Imports.razor
@@ -8,6 +8,7 @@
 @using Dotnetools.Share.Models.Games.Tetris
 @using Dotnetools.Share.Models.Games.Tetris.Enums
 @using Dotnetools.Share.Models.Games.Tetris.Tetrominos
+@using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Routing
 @using Dotnetools.Share.Components.Partials
 @using Dotnetools.Share.Models
