--- a/src/Dotnetools.Web/Pages/Index.razor
+++ b/src/Dotnetools.Web/Pages/Index.razor
@@ -2,32 +2,6 @@
 
 <PageTitle>首页-Dotnet工具箱</PageTitle>
 
-<MRow>
-    <MCol Class="mt-2"
-          Cols="12">
-        <strong style="padding-left: 10px;">在线工具</strong>
-    </MCol>
+<ToolItemList Title="在线工具" WebTitle="Dotnet工具箱" Items="@GlobalData.ToolItems"/>
 
-    @foreach (var item in GlobalData.ToolItems)
-    {
-        <MCol Cols="6"
-              Md="4">
-            <CardItem Title="@item.Name" Cover="@item.Cover" Url="@item.Url"/>
-        </MCol>
-    }
-</MRow>
-
-<MRow>
-    <MCol Class="mt-2"
-          Cols="12">
-        <strong style="padding-left: 10px;">在线游戏</strong>
-    </MCol>
-
-    @foreach (var item in GlobalData.GameItems)
-    {
-        <MCol Cols="6"
-              Md="4">
-            <CardItem Title="@item.Name" Cover="@item.Cover" Url="@item.Url"/>
-        </MCol>
-    }
-</MRow>
+<ToolItemList Title="在线游戏" WebTitle="Dotnet工具箱" Items="@GlobalData.GameItems"/>
