--- a/src/Dotnetools.Web/Pages/Tools/Games.razor
+++ b/src/Dotnetools.Web/Pages/Tools/Games.razor
@@ -1,3 +1,3 @@
 ﻿@page "/games"
 
-<GameOrToolList Title="在线游戏" OtherUrl="/games" Items="@GlobalData.GameItems" />
+<ToolItemList Title="在线游戏" WebTitle="Dotnet工具箱" Items="@GlobalData.GameItems" />
