--- a/src/Dotnetools.Web/Pages/Tools/Tools.razor
+++ b/src/Dotnetools.Web/Pages/Tools/Tools.razor
@@ -1,3 +1,3 @@
 ﻿@page "/tools"
 
-<GameOrToolList Title="在线工具" OtherUrl="/tools" Items="@GlobalData.ToolItems" />
+<ToolItemList Title="在线工具" WebTitle="Dotnet工具箱" Items="@GlobalData.ToolItems" />
