--- a/src/Dotnetools.Web/Shared/RecommendedGamesSideBar.razor
+++ b/src/Dotnetools.Web/Shared/RecommendedGamesSideBar.razor
@@ -1,24 +1,15 @@
-﻿<MCard MaxWidth="450"
-       Class="mx-auto">
-    <MList ThreeLine>
-        <MSubheader>推荐游戏</MSubheader>
+﻿<div class="container">
+    <h3>推荐游戏</h3>
+    <ul>
         @foreach (var item in _items)
         {
-            <MDivider Inset="true"></MDivider>
-            <MListItem Class="game-item">
-                <MListItemAvatar>
-                    <MImage Src="@item.Cover"></MImage>
-                </MListItemAvatar>
-
-                <MListItemContent>
-                    <MListItemTitle Class="game-title">
-                        <a href="@item.Url">@((MarkupString)item.Name)</a>
-                    </MListItemTitle>
-                </MListItemContent>
-            </MListItem>
+            <li>
+                <a href="@item.Url">@((MarkupString)item.Name)</a>
+            </li>
         }
-    </MList>
-</MCard>
+    </ul>
+</div>
+
 
 @code
 {
