--- a/src/Dotnetools.Web/Shared/RecommendedToolsSideBar.razor.css
+++ b/src/Dotnetools.Web/Shared/RecommendedToolsSideBar.razor.css
@@ -1,23 +1,27 @@
-﻿.tool-item {
-    display: flex;
-    align-items: center;
-    padding: 10px;
+﻿.container {
+    background-color: #fff;
+    padding: 20px;
+    margin: 5px;
 }
 
-    .tool-item:hover {
-        background-color: #f5f5f5;
-    }
+h3 {
+    margin-bottom: 10px;
+}
 
-.tool-link {
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+a {
+    display: inline-block;
+    padding: 5px 5px 5px 0;
+    color: #333;
     text-decoration: none;
-    color: inherit;
-}
-
-.tool-title {
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-
-.tool-memo {
-    color: #777;
+    transition: transform 0.3s ease;
 }
