fix code style;

--- a/src/Dotnet9.BlazorWeb/Pages/_Host.cshtml
+++ b/src/Dotnet9.BlazorWeb/Pages/_Host.cshtml
@@ -34,8 +34,8 @@
     <link href="https://cdn.masastack.com/npm/materialicons/materialicons.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdn.staticfile.org/highlight.js/11.7.0/styles/monokai-sublime.min.css"/>
-    <link rel="stylesheet" href="~/css/detail.css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/highlight.js/11.7.0/styles/default.min.css" />
+    <link rel="stylesheet" href="/css/detail.css"/>
     <link rel="stylesheet" href="/css/blogpost.css"/>
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
@@ -61,9 +61,7 @@
 <script type="text/javascript">
         window.highlightJsInterop = {
             initHighlightJs: function () {
-                document.querySelectorAll('pre code').forEach((block) => {
-                    hljs.highlightBlock(block);
-                });
+                hljs.highlightAll();
                 
                 // 获取所有的img标签
                 const imgs = document.getElementsByTagName('img');
