fix display markupstring;

--- a/src/Dotnet9.BlazorWeb/Pages/Albums/Blogs.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Albums/Blogs.razor
@@ -2,7 +2,7 @@
 @inject AlbumService AlbumService
 
 <PageTitle>@_title</PageTitle>
-<h1 class="detail-title">@_title</h1>
+<h1 class="detail-title">@_title?.ToMarkupString()</h1>
 
 <div id="view-content" class="gap-solid"></div>
 
