--- a/src/Dotnet9.BlazorWeb/Pages/Categories/Index.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Categories/Index.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>@_title</PageTitle>
 
-<h1 class="detail-title">@_title</h1>
+<h1 class="detail-title">@_title?.ToMarkupString()</h1>
 
 <div id="view-content" class="gap-solid"></div>
 
