--- a/src/Dotnet9.BlazorWeb/Pages/Blogs/Archives.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Blogs/Archives.razor
@@ -7,8 +7,8 @@
 {
     <div id="nice">
 
-        <h1>@_title</h1>
-        <p>@_description</p>
+        <h1>@_title?.ToMarkupString()</h1>
+        <p>@_description?.ToMarkupString()</p>
 
         <ul>
             @foreach (var groupYear in BlogArchives.GroupBy(x => x.CreationTime.ToString("yyyy年")).OrderByDescending(x => x.Key))
@@ -25,10 +25,10 @@
                                     {
                                         <li>
                                             <h4 class="mt-0 mb-1 font-16">
-                                                <a style="color: #262626;" href="/@blogPost.CreationTime.ToString("yyyy/MM")/@blogPost.Slug">@blogPost.Title</a>
+                                                <a style="color: #262626;" href="/@blogPost.CreationTime.ToString("yyyy/MM")/@blogPost.Slug">@blogPost.Title.ToMarkupString()</a>
                                             </h4>
                                             <p class="text-muted">
-                                                ---<small>@blogPost.CreationTime.ToString("yyyy年MM月dd日 hh:mm:ss")</small>
+                                                ---<small>@blogPost.CreationTime.ToString("yyyy年MM月dd日 hh:mm:ss").ToMarkupString()</small>
                                             </p>
                                         </li>
                                     }
