--- a/src/Dotnet9.BlazorWeb/Shared/BlogSideBar.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/BlogSideBar.razor
@@ -1,6 +1,6 @@
 ﻿<div class="tj_news">
     <div class="side_title">
-        <h3>@Model?.GroupName</h3>
+        <h3>@Model?.GroupName.ToMarkupString()</h3>
     </div>
 
     @if (Model?.Blogs?.Any() == true)
@@ -9,8 +9,8 @@
             @foreach (var blog in Model.Blogs)
             {
                 <li>
-                    <a href="@blog.CreationTime.ToString("/yyyy/MM")/@blog.Slug" title="@blog.Title">
-                        <p>(<span>@blog.ViewCount</span>)@blog.Title</p>
+                    <a href="@blog.CreationTime.ToString("/yyyy/MM")/@blog.Slug">
+                        <p>(<span>@blog.ViewCount</span>)@blog.Title.ToMarkupString()</p>
                     </a>
                 </li>
             }
