--- a/src/Dotnet9.BlazorWeb/Shared/PaginationPartial.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/PaginationPartial.razor
@@ -68,7 +68,7 @@ else
                                 }
                             }
 
-                        </span><span class="info_time">@blog.CreationTime.ToString("yyyy-MM-dd HH:mm")</span><span class="info_view">@blog.ViewCount</span>
+                        </span><span class="info_time">@((blog.ModificationTime ?? blog.CreationTime).ToString("yyyy-MM-dd HH:mm"))</span><span class="info_view">@blog.ViewCount</span>
                     </div>
                 </li>
             }
